# tg2devtools

./: .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run-tests.yml
devtools/: pastetemplate.py
devtools/commands/: crud.py  migration.py  quickstart.py
devtools/commands/model_ming/: session.py
devtools/commands/quickstart_genshi/: index.html  template.html.template_tmpl
devtools/commands/quickstart_jinja/: __init__.py  about.html  about.jinja  authentication.html  data.html  data.jinja  environ.html  environ.jinja  error.html  error.jinja  footer.html  header.html  index.html  index.jinja  login.html  login.jinja  master.html  master.jinja  sidebars.html
devtools/commands/quickstart_kajiki/: about.xml  data.xml  environ.xml  error.xml  index.xhtml  index.xml  login.xml  master.html  master.xml  template.xhtml.template_tmpl
devtools/commands/quickstart_mako/: about.mak  authentication.mak  data.mak  environ.mak  error.mak  index.mak  login.mak  master.html  master.mak
devtools/gearbox/: alembic_migrate.py  quickstart.py  sqlamigrate.py  tgshell.py
devtools/gearbox/quickstart/: __init__.py  command.py
devtools/gearbox/tgext/: __init__.py  command.py
devtools/templates/: __init__.py  crud_controller.py_tmpl  crud_form_widget.py_tmpl
devtools/templates/crud/: edit_form.html_tmpl  list.html_tmpl  master.html_tmpl  master.html_tmpl.html  (+2 more)
devtools/tests/: test_pastetemplate.py  test_quickstart.py
scripts/: _installer.py  create-venv-script.py
(+153 files in other folders)
